--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,7 @@
 
 ftp.server.ip=192.168.101.33
 ftp.user=ftpuser
-ftp.pass=123456
+ftp.pass=12345678
 ftp.server.http.prefix=http://img.mall.com/
 
 
